# velib_ingestion

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/velib_ingestion/: __init__.py  cli.py  client.py  config.py  exporter.py  kafka_stream.py  logger.py  transformer.py  validator.py
tests/: test_client.py  test_exporter.py  test_kafka_stream.py  test_transformer.py  test_validator.py
